# percival

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js
.github/workflows/: ci.yml
api/: index.go
crates/percival/: Cargo.toml
crates/percival-cli/: Cargo.toml
crates/percival-cli/src/: main.rs
crates/percival-wasm/: Cargo.toml
crates/percival-wasm/src/: lib.rs
crates/percival-wasm/tests/: web.rs
crates/percival/examples/: tc.rs
crates/percival/src/: ast.rs  codegen.rs  codegen_json.rs  errors.rs  lib.rs  parser.rs
crates/percival/tests/: parse.rs
examples/: cars.txt  fib.txt  nested.txt  purchased.txt  rolling.txt  tc.txt
patches/: domino+2.1.6.patch
src/: App.svelte  app.css  imports.d.ts  main.ts  svelte-icons.d.ts
src/components/: App.svelte  Dialog.svelte  Header.svelte  Link.svelte  Notebook.svelte  ShareCopy.svelte
src/components/cell/: Cell.svelte  CellDivider.svelte  CellInput.svelte  CellOutput.svelte
src/components/cell/output/: ASTView.svelte  FullView.svelte  Item.svelte  PlotView.svelte  RelationView.svelte  ValueView.svelte
src/lib/: Counter.svelte  marshal.test.ts  marshal.ts  notebook.ts  plot.test.ts  plot.ts  plot.worker.ts  runtime.test.ts  runtime.ts  runtime.worker.ts  stores.ts  text.ts  types.ts  worker.ts
src/lib/codemirror/: language.ts  percival.grammar  percival.grammar.d.ts
src/samples/: starter.percival
