[package]
name = "percival-wasm"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Workaround for https://github.com/rustwasm/wasm-pack/issues/913
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3.51"
percival = { path = "../percival" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
