[package]
name = "percival"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2021"

[dependencies]
ariadne = "0.1.3"
chumsky = "0.7.0"
rpds = "0.11.0"
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "6.1"

[dev-dependencies]
maplit = "1.0.2"
